--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,7 @@ docker run -it -p 7991:9990 -p 7081:8080 aparnachaudhary/wildfly-hc:9.0.0.Final
 
 Remove server-one from the host xml.
 
-sh /opt/jboss/wildfly/bin/domain.sh -Djboss.domain.master.address=192.168.59.103 -b `hostname -i` -Djboss.node.name=node1 --host-config host-slave.xml
+sh /opt/jboss/wildfly/bin/domain.sh -Djboss.domain.master.address=192.168.59.103 -b `hostname -i` -Djboss.node.name=node1 -Djboss.http.port=8080 --host-config host-slave.xml
 
 == WildFly HC2
 
@@ -18,18 +18,18 @@ docker run -it -p 7992:9990 -p 7082:8080 aparnachaudhary/wildfly-hc:9.0.0.Final
 
 Remove server-one from the host xml.
 
-sh /opt/jboss/wildfly/bin/domain.sh -Djboss.domain.master.address=192.168.59.103 -b `hostname -i` -Djboss.node.name=node2 --host-config host-slave.xml
+sh /opt/jboss/wildfly/bin/domain.sh -Djboss.domain.master.address=192.168.59.103 -b `hostname -i` -Djboss.node.name=node2 -Djboss.http.port=8080 --host-config host-slave.xml
 
 == Deploy WAR files
 
 [source,bash]
 -------------
-deploy /Users/Aparna/dev/repos/kosh/examples/feed-producer/target/feed-producer.war --server-groups=other-server-group
+deploy /Users/Aparna/dev/repos/jaxrs-depot/examples/feed-producer/target/feed-producer.war --server-groups=other-server-group
 -------------
 
 [source,bash]
 -------------
-deploy /Users/Aparna/dev/repos/kosh/examples/feed-producer/target/feed-consumer.war --server-groups=other-server-group
+deploy /Users/Aparna/dev/repos/jaxrs-depot/examples/feed-consumer/target/feed-consumer.war --server-groups=other-server-group
 -------------
 
 == Verify cache behavior
@@ -37,3 +37,8 @@ deploy /Users/Aparna/dev/repos/kosh/examples/feed-producer/target/feed-consumer.
 http://192.168.59.103:7081/feed-producer/rest/producer/greet
 
 http://192.168.59.103:7081/feed-consumer/rest/consumer/goodbye
+
+
+undeploy feed-producer.war --server-groups=other-server-group
+
+undeploy feed-consumer.war --server-groups=other-server-group
